# q_and_a-i

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  export_udemy.py  generate_dataset.py  ingest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
exam_gen/: __init__.py  agents.py  chunker.py  db.py  embeddings.py  export.py  generate.py  ingest.py  llm.py  quality.py  retrieval.py
tests/: test_chunker.py  test_db.py  test_export.py  test_generate.py  test_ingest.py  test_quality.py
