[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "exam_gen"
version = "0.1.0"
description = "AI Certification Exam Generator"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.3.5",
    "requests",
    "beautifulsoup4",
    "psycopg2-binary",
    "PyMuPDF",
    "python-dotenv",
    "pytest",
    "fpdf",
    "langgraph",
    "langchain",
    "tiktoken"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["exam_gen*"]
